DE1490: Member Landing Page: Get Prepared button on the landing page is not aligned properly -- fixed DE1494: Setup Wizard UI: Download and Refresh Browser buttons size issue -- fixed

--- a/docroot/css/site/mdo/vv_styles.css
+++ b/docroot/css/site/mdo/vv_styles.css
@@ -34,7 +34,7 @@
 	font-family: Arial;
 	font-style: regular;
 	font-weight: normal;
-	margin: 6px 0 0;
+	margin: 0;
 	padding: 0;
 	line-height: 1.5em;
 }
@@ -97,28 +97,21 @@
 
 #videoContainer{
 /* 	background: url("../../../images/mdo/image_landing_page.png") no-repeat scroll center transparent; */
-	float: left;
 	font-size: 11px;
 	height: 329px;
 	margin: 0px;
 	padding-left: 1px;
-	width: 100%;
+	width: auto;
 	border: 1px solid #CCCCCC;
 }
 
 #navContent{
 	width: auto;
 	margin: 15px 0 0;
-	/*padding-bottom: 10px;*/
-	float: left;
-	position: relative;
-	height: auto;
 	border-bottom: 1px solid #CCCCCC;
 }
 
 .videoVisitContainer .row{
-	display:inline;
-	float: left;
 	width: 100%;
 	height: auto;
 	padding: 0 2px 0 0;
@@ -150,18 +143,18 @@
 }
 
 .landingHalf{
-	display: inline;
     float: left;
-    width: 43%;
+    width: auto;
+    max-width: 47%;
     height: auto;
-    padding: 5px 5px 0;
+    padding: 5px 10px 0;
 }
 
 .landingHalf.iconpromo1{
 }
 
 .landingHalf.iconpromo2{
-	margin-left: 55px;
+	margin-left: 0;
 }
 
 .icon{
@@ -175,18 +168,16 @@
 }
 
 .iconpromo1{
-	width: 350 px;
+	width: 350px;
 	position: relative;
-	margin: 0 10px 0 0;
-	height: 
+	margin: 0;
 }
 
 .iconpromo2{
-	float: left;
-	width: 350 px;
+	float: right;
+	width: 350px;
 	position: relative;
-	margin: 0 10px 0 0;
-	height:
+	margin: 0;
 }
 
 div#iconpromo1{
@@ -563,7 +554,6 @@ div#iconpromo2{
 #displayDevices .threeColumns a, a:active, a:visited{
 	color: #FFFFFF;
 	font-weight: normal;
-	display: block;
 	text-decoration: none;
 }
 
